force-app/main/default/objects/Pay_Statement__c/Pay_Statement__c.object-meta.xml
<CustomObject>
    <label>Pay Statement</label>
    <nameField>
        <displayFormat>PS-{00000000}</displayFormat>
        <label>Pay Statement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>