force-app/main/default/objects/Pay_Statement__c/fields/External_Statement_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Statement_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Statement Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>