force-app/main/default/objects/Pay_Statement__c/fields/Net_Pay__c.field-meta.xml
<CustomField>
    <fullName>Net_Pay__c</fullName>
    <label>Net Pay</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>