force-app/main/default/objects/Pay_Statement__c/fields/Pay_Batch__c.field-meta.xml
<CustomField>
    <fullName>Pay_Batch__c</fullName>
    <description>Pay Batch associated with this pay statement.</description>
    <label>Pay Batch</label>
    <referenceTo>Pay_Batch__c</referenceTo>
    <relationshipLabel>Pay Statements</relationshipLabel>
    <relationshipName>Pay_Statement_Pay_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>