force-app/main/default/objects/Pay_Statement__c/fields/Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_Date__c</fullName>
    <description>Actual date this was paid.</description>
    <label>Pay Date</label>
    <type>Date</type>
</CustomField>