force-app/main/default/objects/Pay_Statement__c/fields/Pay_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Pay_Period_End__c</fullName>
    <label>Pay Period End</label>
    <type>Date</type>
</CustomField>