force-app/main/default/objects/Pay_Statement__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <description>User who is owed this payable (employee, contractor, sales rep, etc.).</description>
    <label>Payee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Pay Statements</relationshipLabel>
    <relationshipName>User_Pay_Statement</relationshipName>
    <type>Lookup</type>
</CustomField>