force-app/main/default/objects/Pay_Statement__c/fields/Payment_Method_Other__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Other__c</fullName>
    <description>When Payment Method = Other, capture provider/method label (e.g., PayPal, Apple Pay).</description>
    <label>Payment Method (Other)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>