force-app/main/default/objects/Pay_Statement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle status of the internal payable.</description>
    <label>Status</label>
    <type>Picklist</type>

    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>

            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>

            <value>
                <fullName>Calculated</fullName>
            </value>

            <value>
                <fullName>Approved</fullName>
            </value>

            <value>
                <fullName>Exported</fullName>
            </value>

            <value>
                <fullName>Paid</fullName>
            </value>

            <value>
                <fullName>Voided</fullName>
            </value>

        </valueSetDefinition>
    </valueSet>

</CustomField>