force-app/main/default/objects/Pay_Statement__c/fields/Total_Reimbursements__c.field-meta.xml
<CustomField>
    <fullName>Total_Reimbursements__c</fullName>
    <label>Total Reimbursements</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>