force-app/main/default/objects/Pay_Statement__c/fields/Total_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Total_Taxes__c</fullName>
    <label>Total Taxes</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>